# vio-metal

./: .gitignore  CMakeLists.txt  README.md  memory_log.csv
.github/workflows/: auto-merge.yml
docs/: changesv0.1.0.md  paramsv0.1.0.md  results.md  reviewv0.1.0.md
eval/: evaluate.sh  plot_cost.py  plot_trajectory.py
results/configs/: cost_log_20260322_195538.csv  cost_log_20260322_195917.csv  gt_tum.txt  timing_20260322_195538.csv  timing_20260322_195917.csv
results/trajectories/: estimated.txt  estimated_20260322_195538.txt  estimated_20260322_195917.txt
src/: main.mm  metal_main.mm  monitor_memory.sh  visualizer.h
src/core/: KeyframePolicy.cpp  KeyframePolicy.h  Profiler.cpp  Profiler.h  Types.h
src/dataset/: EurocLoader.cpp  EurocLoader.h  TrajectoryWriter.cpp  TrajectoryWriter.h
src/imu/: ImuPreintegrator.cpp  ImuPreintegrator.h  ImuTypes.h
src/metal/: FastDetect.h  FastDetect.mm  HarrisResponse.h  HarrisResponse.mm  KLTTracker.h  KLTTracker.mm  MetalContext.h  MetalContext.mm  MetalUndistort.h  MetalUndistort.mm  ORBDescriptor.h  ORBDescriptor.mm  ORBPattern.h  StereoMatcher.h  StereoMatcher.mm
src/optimization/: Factors.cpp  Factors.h  Marginalization.cpp  Marginalization.h  VioOptimizer.cpp  VioOptimizer.h
src/vision/: FeatureDetector.cpp  FeatureDetector.h  FeatureManager.cpp  FeatureManager.h  LoopDetector.cpp  LoopDetector.h  StereoMatcher.cpp  StereoMatcher.h  TemporalTracker.h  TemporalTracker.mm
test/: test_euroc_loader.cpp
